airflow/logs/dag_id=data-ingestion/run_id=manual__2024-07-02T05:01:07.895376+00:00/task_id=ingest_from_mysql/attempt=4.log
[2024-07-02T05:10:20.070+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-02T05:10:20.079+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data-ingestion.ingest_from_mysql manual__2024-07-02T05:01:07.895376+00:00 [queued]>
[2024-07-02T05:10:20.084+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data-ingestion.ingest_from_mysql manual__2024-07-02T05:01:07.895376+00:00 [queued]>
[2024-07-02T05:10:20.084+0000] {taskinstance.py:2306} INFO - Starting attempt 4 of 5
[2024-07-02T05:10:20.092+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonVirtualenvOperator): ingest_from_mysql> on 2024-07-02 05:01:07.895376+00:00
[2024-07-02T05:10:20.101+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=874) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-02T05:10:20.102+0000] {standard_task_runner.py:63} INFO - Started process 875 to run task
[2024-07-02T05:10:20.101+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'data-ingestion', 'ingest_from_mysql', 'manual__2024-07-02T05:01:07.895376+00:00', '--job-id', '25', '--raw', '--subdir', 'DAGS_FOLDER/data-ingestion.py', '--cfg-path', '/tmp/tmp42d9wlwv']
[2024-07-02T05:10:20.104+0000] {standard_task_runner.py:91} INFO - Job 25: Subtask ingest_from_mysql
[2024-07-02T05:10:20.116+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/settings.py:195 DeprecationWarning: The sql_alchemy_conn option in [core] has been moved to the sql_alchemy_conn option in [database] - the old setting has been used, but please update your config.
[2024-07-02T05:10:20.148+0000] {task_command.py:426} INFO - Running <TaskInstance: data-ingestion.ingest_from_mysql manual__2024-07-02T05:01:07.895376+00:00 [running]> on host ***-scheduler
[2024-07-02T05:10:20.188+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data-ingestion' AIRFLOW_CTX_TASK_ID='ingest_from_mysql' AIRFLOW_CTX_EXECUTION_DATE='2024-07-02T05:01:07.895376+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-02T05:01:07.895376+00:00'
[2024-07-02T05:10:20.725+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-02T05:10:20.726+0000] {baseoperator.py:400} WARNING - PythonVirtualenvOperator.execute cannot be called outside TaskInstance!
[2024-07-02T05:10:20.728+0000] {process_utils.py:183} INFO - Executing cmd: /home/***/.local/bin/python -m virtualenv /tmp/venvcn55si7n --python=python
[2024-07-02T05:10:20.729+0000] {process_utils.py:187} INFO - Output:
[2024-07-02T05:10:21.547+0000] {process_utils.py:191} INFO - created virtual environment CPython3.12.4.final.0-64 in 383ms
[2024-07-02T05:10:21.549+0000] {process_utils.py:191} INFO -   creator CPython3Posix(dest=/tmp/venvcn55si7n, clear=False, no_vcs_ignore=False, global=False)
[2024-07-02T05:10:21.549+0000] {process_utils.py:191} INFO -   seeder FromAppData(download=False, pip=bundle, via=copy, app_data_dir=/home/***/.local/share/virtualenv)
[2024-07-02T05:10:21.549+0000] {process_utils.py:191} INFO -     added seed packages: pip==24.0
[2024-07-02T05:10:21.550+0000] {process_utils.py:191} INFO -   activators BashActivator,CShellActivator,FishActivator,NushellActivator,PowerShellActivator,PythonActivator
[2024-07-02T05:10:21.562+0000] {process_utils.py:183} INFO - Executing cmd: /tmp/venvcn55si7n/bin/pip install -r /tmp/venvcn55si7n/requirements.txt
[2024-07-02T05:10:21.563+0000] {process_utils.py:187} INFO - Output:
[2024-07-02T05:10:22.776+0000] {process_utils.py:191} INFO - 
[2024-07-02T05:10:22.781+0000] {process_utils.py:191} INFO - [notice] A new release of pip is available: 24.0 -> 24.1.1
[2024-07-02T05:10:22.784+0000] {process_utils.py:191} INFO - [notice] To update, run: python -m pip install --upgrade pip
[2024-07-02T05:10:22.923+0000] {process_utils.py:183} INFO - Executing cmd: /tmp/venvcn55si7n/bin/python /tmp/venv-callj0rdkk0g/script.py /tmp/venv-callj0rdkk0g/script.in /tmp/venv-callj0rdkk0g/script.out /tmp/venv-callj0rdkk0g/string_args.txt /tmp/venv-callj0rdkk0g/termination.log
[2024-07-02T05:10:22.924+0000] {process_utils.py:187} INFO - Output:
[2024-07-02T05:10:22.946+0000] {process_utils.py:191} INFO -   File "/tmp/venv-callj0rdkk0g/script.py", line 64
[2024-07-02T05:10:22.948+0000] {process_utils.py:191} INFO -     unusual_prefix_50923f202a1be2ffe879bd287c2681623b93c2bb_data-ingestion  = types.ModuleType("unusual_prefix_50923f202a1be2ffe879bd287c2681623b93c2bb_data-ingestion")
[2024-07-02T05:10:22.949+0000] {process_utils.py:191} INFO -     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
[2024-07-02T05:10:22.949+0000] {process_utils.py:191} INFO - SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
[2024-07-02T05:10:22.967+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-02T05:10:23.213+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 437, in execute
    return super().execute(context=serializable_context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 759, in execute_callable
    result = self._execute_python_callable_in_subprocess(python_path)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 497, in _execute_python_callable_in_subprocess
    execute_in_subprocess(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/process_utils.py", line 172, in execute_in_subprocess
    execute_in_subprocess_with_kwargs(cmd, cwd=cwd)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/process_utils.py", line 195, in execute_in_subprocess_with_kwargs
    raise subprocess.CalledProcessError(exit_code, cmd)
subprocess.CalledProcessError: Command '['/tmp/venvcn55si7n/bin/python', '/tmp/venv-callj0rdkk0g/script.py', '/tmp/venv-callj0rdkk0g/script.in', '/tmp/venv-callj0rdkk0g/script.out', '/tmp/venv-callj0rdkk0g/string_args.txt', '/tmp/venv-callj0rdkk0g/termination.log']' returned non-zero exit status 1.
[2024-07-02T05:10:23.226+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=data-ingestion, task_id=ingest_from_mysql, run_id=manual__2024-07-02T05:01:07.895376+00:00, execution_date=20240702T050107, start_date=20240702T051020, end_date=20240702T051023
[2024-07-02T05:10:23.238+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 25 for task ingest_from_mysql (Command '['/tmp/venvcn55si7n/bin/python', '/tmp/venv-callj0rdkk0g/script.py', '/tmp/venv-callj0rdkk0g/script.in', '/tmp/venv-callj0rdkk0g/script.out', '/tmp/venv-callj0rdkk0g/string_args.txt', '/tmp/venv-callj0rdkk0g/termination.log']' returned non-zero exit status 1.; 875)
[2024-07-02T05:10:23.283+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-02T05:10:23.308+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-02T05:10:23.309+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
